Sun Mar 10 20:07:49 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the server to check correctly the amount of connections
	  from single host, by checking also the type of the connection.
	  Fixed also the comparison of number of connections and number
	  of allowed connections.  Affected files are silcd/server.c, 
	  server_util.[ch].

Fri Mar  8 17:16:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the USERS command reply to save the user's mode on the
	  channel as well.  Fixed JOIN command reply to check whether a
	  client is on channel already and not join it twice.  Affected
	  file lib/silcclient/command_reply.c.

	* Added new file silc-expandos.c into irssi/silc/core/ to return
	  various stuff for various signal for the statusbar etc. updating.
	  Now Irssi SILC client prints channel user modes etc. on the
	  statusbar.

	* The user mode (like server/router operator changes) is now shown
	  on the Irssi SILC client's statusbar.  The affected files are
	  irssi/src/silc/core/client_ops.c, silc-expandos.c.

Thu Mar  7 19:21:22 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed silc_mutex_[un]lock calls in lib/silcutil/silcschedule.c
	  to SILC_SCHEDULE_[UN]LOCK macros.

	* Added more error printing to logs in server code.  Affected
	  files silcd/server.c and silcd/protocol.c.

	* Fixed -S option parsing in Irssi SILC Client.  Affected file
	  irssi/src/silc/core/silc-core.c.

	* Added silc_buffer_alloc_size function.  Affected file is
	  lib/silcutil/silcbuffer.h.

Tue Mar  5 14:37:27 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed all silc_[hash|hmac|cipher|pkcs]_default tables to
	  constants.  Affected files in
	  lib/silccrypt/silcpkcs.[ch], silchash.[ch], silchmac.[ch] and
	  silccipher.[ch].

	* Changed the internal SFTP Memory FS table to const.  Affected
	  file lib/silcsftp/sftp_fs_memory.c.

Sun Mar  3 18:37:13 EET 2002  Pekka Riikonen <priikone@silcnet.org>
